--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,12 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
-
+    compile files('src/main/libs/java-json.jar')
+    compile files('src/main/libs/dom4j-1.6.1.jar')
 }
 dependencies {
     compile 'com.android.support:support-v4:23.+'
