--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,15 +74,20 @@
             android:name=".WelcomePageActivity"
             android:label="@string/title_activity_welcome_page"
             android:theme="@style/AppTheme.NoActionBar" >
-
         </activity>
-        <activity android:name=".splash"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".splash"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".sideslash"
+            android:label="@string/title_activity_sideslash"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
